--- a/package.json
+++ b/package.json
@@ -21,9 +21,16 @@
   },
   "homepage": "https://github.com/Liiibooo/vue-gulu#readme",
   "dependencies": {
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-hot-reload-api": "2.3.0"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.4"
+    "@vue/component-compiler-utils": "^3.0.2",
+    "node-sass": "^4.9.0",
+    "parcel-bundler": "^1.9.2",
+    "vue-template-compiler": "^2.6.10"
+  },
+  "alias": {
+    "vue": "./node_modules/vue/dist/vue.common.js"
   }
 }
