--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.0.2",
     "node-sass": "^4.9.0",
-    "parcel-bundler": "^1.9.2",
+    "parcel": "^1.10.0",
+    "parcel-bundler": "^1.10.0",
     "vue-template-compiler": "^2.6.10"
   },
   "alias": {
