--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "自己构造vue组件",
   "main": "index.js",
   "scripts": {
+    "dev": "npx parcel index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.0.2",
+    "chai": "^4.2.0",
     "node-sass": "^4.9.0",
     "parcel": "^1.10.0",
     "parcel-bundler": "^1.10.0",
